feat(genReact): default not override existed react component

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "build-react-svg",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js",
+    "demo": "node build-demo.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
